force-app/main/default/objects/SAC_ProductCase__c/SAC_ProductCase__c.object-meta.xml
<CustomObject>
    <label>Producto de reclamación</label>
    <nameField>
        <displayFormat>PRD-R-{00000}</displayFormat>
        <label>Nombre de Producto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de reclamación</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>