force-app/main/default/objects/SAC_ProductCase__c/fields/N_Contrato__c.field-meta.xml
<CustomField>
    <fullName>N_Contrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nº Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>