force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_CajaProcedencia__c.field-meta.xml
<CustomField>
    <fullName>SAC_CajaProcedencia__c</fullName>
    <description>Picklist que se informará en caso de que la procedencia del contrato sea Banca Cívica</description>
    <label>Caja de procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caja Navarra</fullName>
            </value>
            <value>
                <fullName>Caja Canarias</fullName>
            </value>
            <value>
                <fullName>Caja de Burgos</fullName>
            </value>
            <value>
                <fullName>Cajasol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>