force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Descripcion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>