force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_DisponemosDeContrato__c.field-meta.xml
<CustomField>
    <fullName>SAC_DisponemosDeContrato__c</fullName>
    <description>Campo para indicar si disponemos de contrato</description>
    <label>Disponemos de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>