force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_FechaApertura__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaApertura__c</fullName>
    <description>Fecha de apertura del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha apertura</label>
    <type>Date</type>
</CustomField>