force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_FechaCancelacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaCancelacion__c</fullName>
    <description>Fecha de cancelación del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha cancelación</label>
    <type>Date</type>
</CustomField>