force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_Negociar__c.field-meta.xml
<CustomField>
    <fullName>SAC_Negociar__c</fullName>
    <description>Campo para indicar si hay que negociar</description>
    <label>Negociar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>