force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_Pretension__c.field-meta.xml
<CustomField>
    <fullName>SAC_Pretension__c</fullName>
    <label>Pretensión</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Productos de reclamación</relationshipLabel>
    <relationshipName>Productos_de_reclamacion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>