force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_TaeInicialContrato__c.field-meta.xml
<CustomField>
    <fullName>SAC_TaeInicialContrato__c</fullName>
    <description>Campo para indicar el tae inicial del contrato</description>
    <label>Tae inicial contrato</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>