force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_TaeMaximoAplicado__c.field-meta.xml
<CustomField>
    <fullName>SAC_TaeMaximoAplicado__c</fullName>
    <description>Campo para indicar el tae máximo aplicado</description>
    <label>Tae máximo aplicado</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>