force-app/main/default/objects/SAC_ProductCase__c/fields/SAC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banca particulares</fullName>
            </value>
            <value>
                <fullName>Banca Personal</fullName>
            </value>
            <value>
                <fullName>Caixabank Now</fullName>
            </value>
            <value>
                <fullName>Cartera gestionada</fullName>
            </value>
            <value>
                <fullName>Contrato no aplica</fullName>
            </value>
            <value>
                <fullName>Contrato no localizado</fullName>
            </value>
            <value>
                <fullName>Decesos</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Dia a dia</fullName>
            </value>
            <value>
                <fullName>Disfrutar de la vida</fullName>
            </value>
            <value>
                <fullName>Domicil. recibos</fullName>
            </value>
            <value>
                <fullName>Dormir tranquilo</fullName>
            </value>
            <value>
                <fullName>Fondos</fullName>
            </value>
            <value>
                <fullName>Hipoteca</fullName>
            </value>
            <value>
                <fullName>Hogar</fullName>
            </value>
            <value>
                <fullName>Nómina</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Pensar en el futuro</fullName>
            </value>
            <value>
                <fullName>Pensión</fullName>
            </value>
            <value>
                <fullName>Planes de pensiones</fullName>
            </value>
            <value>
                <fullName>Préstamo</fullName>
            </value>
            <value>
                <fullName>Protección senior</fullName>
            </value>
            <value>
                <fullName>Rentas vitalicias</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Seguros ahorro</fullName>
            </value>
            <value>
                <fullName>ServiCuentas</fullName>
            </value>
            <value>
                <fullName>Seviam</fullName>
            </value>
            <value>
                <fullName>Sistemas seguridad</fullName>
            </value>
            <value>
                <fullName>Tarjeta crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>