force-app/main/default/objects/SAC_ProductCase__c/validationRules/SAC_CodNumerico.validationRule-meta.xml
<ValidationRule>
    <fullName>SAC_CodNumerico</fullName>
    <active>true</active>
    <description>Esta validation rule permite que solo podamos ingresar números en el campo Text Nº Contrato</description>
    <errorConditionFormula>AND(
				AND(
								!$Permission.CBK_BypassValidationRules,
								!$Permission.SAC_ByPass),
    NOT(REGEX(N_Contrato__c, &quot;^[0-9]*$&quot;))
)</errorConditionFormula>
    <errorDisplayField>N_Contrato__c</errorDisplayField>
    <errorMessage>No puedes introducir cadenas de texto, solo dígitos</errorMessage>
</ValidationRule>